# stm32_cubemx_atlas_rob

./: .gitmodules  components.txt
components/a4988/: a4988.c  a4988_config.h
components/as5600/: CMakeLists.txt  as5600.c  as5600.h  as5600_config.h  as5600_registers.h
components/atlas_core/: CMakeLists.txt  atlas_config.h  atlas_core.h  atlas_data.c  atlas_data.h  atlas_err.c  atlas_err.h  atlas_joint_num.h  atlas_log.c  atlas_log.h  atlas_packet.h  atlas_path.c  atlas_path.h  atlas_sd.h  atlas_utility.h
components/atlas_rob/: CMakeLists.txt  a.sh  atlas_rob.c  atlas_rob.h  nvic.c  syscalls.c
components/atlas_rob/common/: CMakeLists.txt  common.h  event.h  hooks.c  manager.c  manager.h  notify.h  nvic.c
components/atlas_rob/joints_task/: CMakeLists.txt  joints_manager.c  joints_manager.h  joints_task.c  joints_task.h
components/atlas_rob/joints_task/joint_task/: CMakeLists.txt  joint_interface.c  joint_manager.c  joint_manager.h  joint_task.c  joint_task.h
components/atlas_rob/kinematics_task/: kinematics_manager.c  kinematics_manager.h  kinematics_task.c
components/atlas_rob/packet_task/: packet_manager.c  packet_manager.h  packet_task.c
components/atlas_rob/safety_task/: CMakeLists.txt  safety_manager.c  safety_manager.h  safety_task.c  safety_task.h
components/atlas_rob/system_task/: CMakeLists.txt  system_manager.c  system_manager.h  system_task.c
components/atlas_rob/uart_task/: uart_manager.c  uart_manager.h  uart_task.c  uart_task.h
components/handle_manager/: CMakeLists.txt  handle_manager.h
components/ina226/: CMakeLists.txt  ina226.c  ina226.h  ina226_config.h  ina226_registers.h
components/motor_driver/: CMakeLists.txt  motor_driver.c  motor_driver_config.h
components/pid_regulator/: CMakeLists.txt  pid_regulator.c
components/step_motor/: CMakeLists.txt  step_motor.c  step_motor_config.h
cubemx/: .mxproject  cubemx.ioc
cubemx/Core/Inc/: FreeRTOSConfig.h  stm32l4xx_it.h
cubemx/Core/Src/: freertos.c  gpio.c  main.c  stm32l4xx_it.c  syscalls.c  tim.c
cubemx/cmake/stm32cubemx/: CMakeLists.txt
main/: CMakeLists.txt  main.c  nvic.c  syscalls.c
